logs/CVE-2017-0381-PaleMoon/log-error
silk/x86/NSQ_sse.c:302:22: error: always_inline function '_mm_shuffle_epi8' requires target feature 'ssse3', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'ssse3'
    a_Q12_01234567 = _mm_shuffle_epi8( a_Q12_01234567, xmm_one );
                     ^
silk/x86/NSQ_sse.c:303:22: error: always_inline function '_mm_shuffle_epi8' requires target feature 'ssse3', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'ssse3'
    a_Q12_89ABCDEF = _mm_shuffle_epi8( a_Q12_89ABCDEF, xmm_one );
                     ^
silk/x86/NSQ_sse.c:314:17: error: always_inline function '_mm_shuffle_epi8' requires target feature 'ssse3', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'ssse3'
    xmm_tempa = _mm_shuffle_epi8( xmm_tempa, xmm_one );
                ^
silk/x86/NSQ_sse.c:315:17: error: always_inline function '_mm_shuffle_epi8' requires target feature 'ssse3', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'ssse3'
    xmm_tempb = _mm_shuffle_epi8( xmm_tempb, xmm_one );
                ^
silk/x86/NSQ_sse.c:323:17: error: always_inline function '_mm_shuffle_epi8' requires target feature 'ssse3', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'ssse3'
    xmm_tempa = _mm_shuffle_epi8( xmm_tempa, xmm_one );
                ^
silk/x86/NSQ_sse.c:324:17: error: always_inline function '_mm_shuffle_epi8' requires target feature 'ssse3', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'ssse3'
    xmm_tempb = _mm_shuffle_epi8( xmm_tempb, xmm_one );
                ^
silk/x86/NSQ_sse.c:333:17: error: always_inline function '_mm_shuffle_epi8' requires target feature 'ssse3', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'ssse3'
    xmm_tempa = _mm_shuffle_epi8( xmm_tempa, xmm_one );
                ^
silk/x86/NSQ_sse.c:334:17: error: always_inline function '_mm_shuffle_epi8' requires target feature 'ssse3', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'ssse3'
    xmm_tempb = _mm_shuffle_epi8( xmm_tempb, xmm_one );
                ^
silk/x86/NSQ_sse.c:351:33: error: '__builtin_ia32_palignr128' needs target feature ssse3
        psLPC_Q14_hi_89ABCDEF = _mm_alignr_epi8( psLPC_Q14_hi_01234567, psLPC_Q14_hi_89ABCDEF, 2 );
                                ^
/usr/local/lib/clang/7.1.0/include/tmmintrin.h:162:12: note: expanded from macro '_mm_alignr_epi8'
  (__m128i)__builtin_ia32_palignr128((__v16qi)(__m128i)(a), \
           ^
silk/x86/NSQ_sse.c:352:33: error: '__builtin_ia32_palignr128' needs target feature ssse3
        psLPC_Q14_lo_89ABCDEF = _mm_alignr_epi8( psLPC_Q14_lo_01234567, psLPC_Q14_lo_89ABCDEF, 2 );
                                ^
/usr/local/lib/clang/7.1.0/include/tmmintrin.h:162:12: note: expanded from macro '_mm_alignr_epi8'
  (__m128i)__builtin_ia32_palignr128((__v16qi)(__m128i)(a), \
           ^
silk/x86/NSQ_sse.c:399:30: error: always_inline function '_mm_cvtepi16_epi32' requires target feature 'sse4.1', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'sse4.1'
                b_Q14_3210 = OP_CVTEPI16_EPI32_M64( b_Q14 );
                             ^
./celt/x86/x86cpu.h:87:3: note: expanded from macro 'OP_CVTEPI16_EPI32_M64'
 (_mm_cvtepi16_epi32(_mm_loadl_epi64((__m128i *)(x))))
  ^
silk/x86/NSQ_sse.c:407:29: error: always_inline function '_mm_mul_epi32' requires target feature 'sse4.1', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'sse4.1'
                xmm_tempa = _mm_mul_epi32( xmm_tempa, b_Q14_3210 );
                            ^
silk/x86/NSQ_sse.c:412:37: error: always_inline function '_mm_mul_epi32' requires target feature 'sse4.1', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'sse4.1'
                pred_lag_ptr_0123 = _mm_mul_epi32( pred_lag_ptr_0123, b_Q14_0123 );
                                    ^
silk/x86/NSQ_sse.c:567:31: error: always_inline function '_mm_mul_epi32' requires target feature 'sse4.1', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'sse4.1'
            xmm_xq_Q14_3210 = _mm_mul_epi32( xmm_xq_Q14_3210, xmm_Gain_Q10 );
                              ^
silk/x86/NSQ_sse.c:568:31: error: always_inline function '_mm_mul_epi32' requires target feature 'sse4.1', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'sse4.1'
            xmm_xq_Q14_x3x1 = _mm_mul_epi32( xmm_xq_Q14_x3x1, xmm_Gain_Q10 );
                              ^
silk/x86/NSQ_sse.c:569:31: error: always_inline function '_mm_mul_epi32' requires target feature 'sse4.1', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'sse4.1'
            xmm_xq_Q14_7654 = _mm_mul_epi32( xmm_xq_Q14_7654, xmm_Gain_Q10 );
                              ^
silk/x86/NSQ_sse.c:570:31: error: always_inline function '_mm_mul_epi32' requires target feature 'sse4.1', but would be inlined into function 'silk_noise_shape_quantizer_10_16_sse4_1' that is compiled without support for 'sse4.1'
            xmm_xq_Q14_x7x5 = _mm_mul_epi32( xmm_xq_Q14_x7x5, xmm_Gain_Q10 );
                              ^
silk/x86/NSQ_sse.c:577:31: error: '__builtin_ia32_pblendw128' needs target feature sse4.1
            xmm_xq_Q14_3210 = _mm_blend_epi16( xmm_xq_Q14_3210, xmm_xq_Q14_x3x1, 0xCC );
                              ^
/usr/local/lib/clang/7.1.0/include/smmintrin.h:530:13: note: expanded from macro '_mm_blend_epi16'
  (__m128i) __builtin_ia32_pblendw128 ((__v8hi)(__m128i)(V1), \
            ^
silk/x86/NSQ_sse.c:578:31: error: '__builtin_ia32_pblendw128' needs target feature sse4.1
            xmm_xq_Q14_7654 = _mm_blend_epi16( xmm_xq_Q14_7654, xmm_xq_Q14_x7x5, 0xCC );
                              ^
/usr/local/lib/clang/7.1.0/include/smmintrin.h:530:13: note: expanded from macro '_mm_blend_epi16'
  (__m128i) __builtin_ia32_pblendw128 ((__v8hi)(__m128i)(V1), \
            ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make[2]: *** [silk/x86/NSQ_sse.lo] Error 1
make[1]: *** [all-recursive] Error 1
make: *** [all] Error 2
